--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ProyectoIntegrado-IvanCruzado
-spring.datasource.url = jdbc:mysql://root:LIhViumMxFMVWuubnSFWaZWuoXcTNJiY@monorail.proxy.rlwy.net:35001/bproyecto
-spring.datasource.username = root
-spring.datasource.password = LIhViumMxFMVWuubnSFWaZWuoXcTNJiY
+spring.datasource.url=jdbc:mysql://localhost:3306/bdproyecto?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 logging.level.org.springframework.security=DEBUG
