--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ProyectoIntegrado-IvanCruzado
+spring.application.name=ProyectoIntegradoApi-IvanCruzado
 spring.datasource.url=jdbc:mysql://localhost:3306/bdproyecto?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -8,4 +8,5 @@ logging.level.org.springframework.security=DEBUG
 spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=35001
