--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ logging.level.org.springframework.security=DEBUG
 spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=35001
