--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,31 @@
 spring.application.name=ProyectoIntegradoApi-IvanCruzado
+
+# URL de conexión a la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/bdproyecto?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
-logging.level.org.springframework.security=DEBUG
+
+# Configuración de Hibernate y JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Configuración de archivos estáticos
 spring.web.resources.static-locations=classpath:/static/,file:./src/main/resources/static/imgs/escudos/
+
+# Configuración de subida de archivos
 spring.servlet.multipart.max-request-size=128MB
 spring.servlet.multipart.max-file-size=10MB
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Seguridad
+logging.level.org.springframework.security=DEBUG
+
+# Puerto del servidor
 server.port=35001
+
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
